fix: change tooltip background color + disable tooltip on smaller screens

--- a/src/app/components/layout/Tooltip.scss
+++ b/src/app/components/layout/Tooltip.scss
@@ -1,4 +1,5 @@
 @import '../../../scss/fonts';
+@import '../../../scss/media-queries';
 
 .tooltip {
     position: relative;
@@ -14,7 +15,7 @@
         border-radius: 0.25rem;
         background: var(--tooltip-background);
         white-space: nowrap;
-        color: #ffffff;
+        color: var(--tooltip-text);
         z-index: 1;
         opacity: 0;
         transition: all 250ms;
@@ -34,11 +35,35 @@
             right: 150px;
             transform: rotate(45deg);
         }
+
+        @include desktop-down {
+            display: none;
+        }
+
+        @include tablet-down {
+            display: none;
+        }
+      
+        @include phone-down {
+            display: none;
+        }
     }
 
     .tooltip__children {
         white-space: nowrap;
         font-weight: 600;
         cursor: pointer;
+
+        @include desktop-down {
+            cursor: text;
+        }
+
+        @include tablet-down {
+            cursor: text;
+        }
+      
+        @include phone-down {
+            cursor: text;
+        }
     }
 }
