--- a/src/scss/themes/dark.scss
+++ b/src/scss/themes/dark.scss
@@ -14,5 +14,6 @@
   --scroll-background: #212a44;
   --drop-shadow: #22293e;
   --dialog-shield: #aaaaaa;
-  --tooltip-background: #353f60;
+  --tooltip-background: #9aadce;
+  --tooltip-text: #22293e;
 }
