--- a/src/scss/themes/light.scss
+++ b/src/scss/themes/light.scss
@@ -14,5 +14,6 @@
   --scroll-background: #ffffff;
   --drop-shadow: #aaaaaa;
   --dialog-shield: #111111;
-  --tooltip-background: #485776;
+  --tooltip-background: #9aadce;
+  --tooltip-text: #ffffff;
 }
